# td-sandboxed

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
docs/: prd.md  (+28 more)
services/mt5-bridge/: .gitignore  Cargo.toml  Dockerfile  README.md
services/mt5-bridge/src/: config.rs  error.rs  lib.rs  main.rs  protocol.rs  zmq_server.rs
services/mt5-bridge/src/handlers/: mod.rs  order_handler.rs  tick_handler.rs
services/mt5-bridge/src/models/: mod.rs  order.rs  tick.rs
services/mt5-bridge/tests/: integration_tests.rs  protocol_tests.rs  zmq_server_tests.rs
services/trading-engine/: .gitignore  Dockerfile  README.md  alembic.ini  compliance-report-test-001-2026-02-27.json  pyproject.toml
services/trading-engine/alembic/: README.md  env.py
services/trading-engine/alembic/versions/: 005_state_snapshots.py  006_trades_strategy_index.py  007_audit_retention_and_aggregate.py  008_violations_retention_and_aggregate.py  009_multi_firm_account_binding.py  010_rename_ftmo_audit_events.py  011_drop_prop_firm_legacy.py
services/trading-engine/configs/: example_custom_rules.yaml
services/trading-engine/configs/backtest/: epic13-baseline-m15.yaml  epic13-baseline.yaml  epic13-donchian-baseline-m15.yaml  epic13-donchian-baseline-m5.yaml  epic13-donchian-scaleout-m15.yaml  epic13-donchian-scaleout-m5.yaml  epic13-ma-crossover-baseline-m15.yaml  epic13-ma-crossover-baseline-m5.yaml  epic13-ma-crossover-scaleout-m15.yaml  epic13-ma-crossover-scaleout-m5.yaml  epic13-scaleout-m15.yaml  epic13-scaleout.yaml
services/trading-engine/scripts/: run_epic12a_baseline.py  stitch_chunks_to_window.py
services/trading-engine/src/: __init__.py  __main__.py  engine.py
services/trading-engine/src/accounts/: __init__.py  account_manager.py  audit_rules_source.py  metrics.py  metrics_service.py  models.py  phase_promotion.py  pnl_registry.py  pnl_tracker.py  risk_isolation.py  risk_manager.py  risk_registry.py  risk_state.py  signal_router.py  state.py
services/trading-engine/src/adapters/: __init__.py  mt5_connection_manager.py  redis_adapter.py  redis_config.py  redis_models.py  zmq_adapter.py  zmq_models.py
services/trading-engine/src/audit/: __init__.py  audit_service.py  audit_writer.py
services/trading-engine/src/backtesting/: __init__.py  _cli_utils.py  ab_compare.py  account_state_builder.py  bar_converter.py  cli.py  commission.py  data_cache.py  data_loader.py  engine.py  ftmo_actor.py  ftmo_preset.py  job_config.py  parameter_sweep.py  prop_firm_actor.py  prop_firm_preset.py  result.py  runner_facade.py  spread_fee_model.py  strategy_registry.py  synthetic_bars.py  walk_forward.py
services/trading-engine/src/calendar/: calendar_models.py  economic_calendar_service.py  forex_factory_parser.py
services/trading-engine/src/cli/: __init__.py  accounts.py  audit.py  config.py  constants.py  main.py  report.py
services/trading-engine/src/config/: __init__.py  firm_profile.py  firm_registry.py  loader.py  session_clock.py
services/trading-engine/src/engine/: __init__.py  account_session.py  actors.py  collaborators.py  config.py  lifecycle.py  live_orchestrator.py  lock_lost.py  node_factory.py  recovery_orchestrator.py
services/trading-engine/src/execution/: __init__.py  exceptions.py  exposure_reservation.py  order_validator.py  validated_adapter.py
services/trading-engine/src/indicators/: __init__.py  adx.py  bb_width.py  ema_slope.py  realized_vol.py  session_vwap.py  supertrend.py
services/trading-engine/src/orders/: __init__.py  close_order_builder.py  db_models.py  execution_service.py  order.py  order_gateway.py  position_tracker.py  signal.py  trade.py  (+1 more)
services/trading-engine/tests/: conftest.py
(+647 files in other folders)
