[project]
name = "trading-engine"
version = "0.1.0"
description = "NautilusTrader-based trading engine with FTMO compliance"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Sandboxed Team"}
]
dependencies = [
    "nautilus_trader>=1.200",
    "redis>=5.0",
    "pyzmq>=25.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "tabulate>=0.9.0",
    "reportlab>=4.0",
    # Epic 8 — Strategies & Backtesting Framework
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: marks tests as fast unit tests (default suite)",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "hypothesis>=6.100",
    "pytest-benchmark>=4.0",
    # Story 10.5f — E2E live-trading integration tests need a fake
    # Redis with full pubsub semantics. ``fakeredis[lua]`` ships the
    # Lua extension required for the 10.4 atomic exposure scripts.
    "fakeredis[lua]>=2.20",
]
